--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Tadpoles</title>
-    <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" src="./paper-full.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script type="text/javascript" src="./vendor/paper-full.js"></script>
     <script type="text/paperscript" canvas="canvas">
         // Adapted from Flocking Processing example by Daniel Schiffman:
         // http://processing.org/learning/topics/flocking.html
@@ -271,11 +272,6 @@
             }
         }
     </script>
-    <style>
-        body {
-            background: black;
-        }
-    </style>
 </head>
 <body>
     <canvas id="canvas" resize></canvas>
