--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
             }
         }
     </script>
+    <script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
     <canvas id="canvas" resize></canvas>
